--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,3 @@
-<!--
-* CoreUI - Free Angular Admin Template
-* @version v2.2.1
-* @link https://coreui.io/angular/
-* Copyright (c) 2018 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://coreui.io/license)
--->
 <!doctype html>
 <html>
 <head>
@@ -16,18 +9,9 @@
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
 	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<title>Synergic Courier Service</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    // Shared ID
-    gtag('config', 'UA-118965717-3');
-    // Angular ID
-    gtag('config', 'UA-118965717-4');
-  </script>
+
 </head>
 <body class="app">
   <!-- App Loading... -->
